--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.5",
         "babel-preset-env": "^1.6.1",
-        "babel-preset-react": "^6.16.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-react": "^6.24.1",
         "babel-preset-stage-0": "^6.24.1",
         "css-loader": "^2.1.1",
         "file-loader": "^3.0.1",
